--- a/app/src/main/res/layout/activity_issue_details.xml
+++ b/app/src/main/res/layout/activity_issue_details.xml
@@ -10,13 +10,12 @@
         android:id="@+id/issueTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="115dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="Issue Title"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvIssueSubsections"
