--- a/app/src/main/res/layout/activity_user_feed.xml
+++ b/app/src/main/res/layout/activity_user_feed.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +7,6 @@
     android:layout_height="match_parent"
     tools:openDrawer="start">
 
-
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -16,6 +14,10 @@
         android:layout_height="match_parent"
         tools:context="com.codepath.engage.ViewEvents"
         android:fitsSystemWindows="true">
+
+        <include
+            android:id="@+id/toolbar_userfeed"
+            layout="@layout/toolbar" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvEvents"
@@ -26,30 +28,34 @@
             tools:layout_editor_absoluteY="65dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/feed"
+            android:layout_below="@+id/toolbar_userfeed"
             android:layout_alignParentStart="true" />
 
-        <TextView
-            android:id="@+id/feed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
-            android:text="My Feed"
-            android:textSize="30sp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-           />
+        <!--<TextView-->
+            <!--android:id="@+id/feed"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:text="My Feed"-->
+            <!--android:textSize="30sp"-->
+            <!--android:layout_below="@+id/toolbar"-->
+            <!--android:layout_centerHorizontal="true"-->
+           <!--/>-->
 
     </RelativeLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nvView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:background="@android:color/white"
-        android:theme="@style/AppTheme"
-        app:itemTextColor="@android:color/black"
-        app:menu="@menu/profilebar"
-        android:layout_alignParentTop="true" />
+    <FrameLayout
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white">
+
+        <com.mindorks.placeholderview.PlaceHolderView
+            android:id="@+id/drawer_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"/>
+
+    </FrameLayout>
+
 </android.support.v4.widget.DrawerLayout>
