--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:layout_height="50dp"
@@ -10,12 +9,28 @@
     android:paddingEnd="20dp"
     android:background="?android:attr/selectableItemBackground">
 
-    <TextView
-        android:id="@+id/itemNameTxt"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="Menu Item"
-        android:layout_marginStart="10dp"
-        android:textSize="14sp" />
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/ivIcon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@android:color/transparent" />
+
+        <TextView
+            android:id="@+id/itemNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/ivIcon"
+            android:text="Menu Item"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
+
 </LinearLayout>
