--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -282,4 +282,5 @@
 
         <color name="black">#000000</color>
         <color name="white">#FFFFFF</color>
+        <color name="smalt">#002C9E</color>
 </resources>
