--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -23,14 +23,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/ivPicture"
-                android:layout_width="match_parent"
-                android:layout_height="175dp"
-                android:layout_alignParentTop="true"
-                app:srcCompat="@android:color/black"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentStart="true" />
+            <!--<ImageView-->
+                <!--android:id="@+id/ivPicture"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="175dp"-->
+                <!--android:layout_alignParentTop="true"-->
+                <!--app:srcCompat="@android:color/black"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_alignParentStart="true" />-->
 
             <TextView
                 android:id="@+id/tvHost"
@@ -61,21 +61,22 @@
                 android:text="@string/event_description"
                 android:layout_below="@+id/line2"
                 android:layout_marginBottom="5dp"
+                android:layout_marginStart="10dp"
                 android:layout_alignStart="@+id/tvEventName" />
 
-            <TextView
-                android:id="@+id/tvEventName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_below="@+id/ivPicture"
-                android:layout_marginTop="10dp"
-                android:fontFamily="serif"
-                android:text="@string/event_name"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentStart="true"/>
+            <!--<TextView-->
+                <!--android:id="@+id/tvEventName"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginStart="10dp"-->
+                <!--android:layout_below="@+id/ivPicture"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:fontFamily="serif"-->
+                <!--android:text="@string/event_name"-->
+                <!--android:textSize="30sp"-->
+                <!--android:textStyle="bold"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_alignParentStart="true"/>-->
 
             <View
                 android:id="@+id/line"
