--- a/app/src/main/res/drawable/viewevents_border.xml
+++ b/app/src/main/res/drawable/viewevents_border.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <!-- This is the stroke you want to define -->
-    <stroke android:width="1dp"
-        android:color="#E10028"/>
+    <!--<stroke android:width="1dp"-->
+        <!--android:color="#E10028"/>-->
 
     <!-- Optional, round your corners -->
     <corners android:bottomLeftRadius="5dp"
