--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -16,34 +16,40 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:background="@color/white">
 
             <ImageView
-
                 android:id="@+id/ivBackdrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                android:scaleType="fitXY"
-                app:layout_collapseMode="none" />
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.NoActionBar">
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                android:background="@color/white">
 
                 <TextView
-                    android:id="@+id/tvTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:text="Event Name"
+                    android:id="@+id/tvEventName"
+                    android:textStyle="bold"
                     android:fontFamily="serif"
-                    android:text="Application Title"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
-            </android.support.v7.widget.Toolbar>
+                    android:textSize="22sp"
+                    android:textColor="@color/black"
+                    android:gravity="center|start"
+                    />
 
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -70,7 +76,8 @@
             app:tabIndicatorColor="#F03A18"
             app:tabIndicatorHeight="5dp"
             app:tabSelectedTextColor="#F03A18"
-            app:tabTextColor="#fff" />
+            app:tabTextColor="#fff"
+            android:elevation="10dp"/>
 
     </FrameLayout>
 
