--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -93,15 +93,15 @@
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 
-    <Button
-        android:id="@+id/fabSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="5dp"
-        android:text="Save"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+    <!--<Button-->
+        <!--android:id="@+id/fabSave"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginBottom="5dp"-->
+        <!--android:layout_marginEnd="5dp"-->
+        <!--android:text="Save"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentEnd="true" />-->
 
 </RelativeLayout>
