--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/ivBackdrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="?attr/actionBarSize"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
@@ -78,7 +79,6 @@
             app:tabSelectedTextColor="#F03A18"
             app:tabTextColor="#fff"
             android:elevation="10dp"/>
-
     </FrameLayout>
 
     <FrameLayout
@@ -94,5 +94,18 @@
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/download"
+        app:backgroundTint="@color/white"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|end"
+        android:elevation="10dp"
+        app:rippleColor="#F03A18"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
