--- a/app/src/main/res/layout/item_issue_subsection.xml
+++ b/app/src/main/res/layout/item_issue_subsection.xml
@@ -14,7 +14,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="Specific Issues"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        android:textColor="#000000"/>
 
     <ListView
         android:id="@+id/issueList"
@@ -23,10 +24,12 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/subTitle"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="15dp" />
+        android:layout_marginEnd="15dp"
+        android:textColor="#000000"/>
 
     <TextView
         android:id="@+id/readmore"
+        android:textColor="#000000"
         android:layout_width="96dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/issueList"
