--- a/app/src/main/res/layout/activity_user_feed.xml
+++ b/app/src/main/res/layout/activity_user_feed.xml
@@ -49,6 +49,16 @@
                     android:layout_centerVertical="true"
                     android:layout_alignParentStart="true" />
 
+                <ImageView
+                    android:id="@+id/Home"
+                    android:layout_width="30dp"
+                    android:onClick="goHome"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="10dp"
+                    app:srcCompat="@drawable/home"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="10dp"/>
+
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
@@ -66,18 +76,6 @@
             tools:layout_editor_absoluteX="2dp"
             tools:layout_editor_absoluteY="65dp"
             android:layout_below="@+id/header" />
-
-        <!--<TextView-->
-            <!--android:id="@+id/feed"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="21dp"-->
-            <!--android:text="My Feed"-->
-            <!--android:textSize="30sp"-->
-            <!--android:textColor="#000000"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:layout_centerHorizontal="true"-->
-           <!--/>-->
 
     </RelativeLayout>
 
