--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,4 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.codepath.engage.ui.activities.SplashActivity" />
+
+    tools:context="com.codepath.engage.ui.activities.SplashActivity" >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/logomark"
+        />
+</android.support.design.widget.CoordinatorLayout>
