--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -280,7 +280,7 @@
         <color name="grey_800">#424242</color>
         <color name="grey_900">#212121</color>
 
-        <color name="black">#000000</color>
+        <color name="black">#dd1919</color>
         <color name="white">#FFFFFF</color>
         <color name="smalt">#002C9E</color>
 </resources>
