--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -46,7 +46,7 @@
                     android:textStyle="bold"
                     android:fontFamily="serif"
                     android:textSize="20sp"
-                    android:textColor="@color/black"
+                    android:textColor="#000000"
                     android:gravity="center"
                     />
 
@@ -69,7 +69,6 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="bottom"
-            android:background="#000000"
             app:layout_anchor="@+id/appbar"
             app:layout_anchorGravity="bottom"
             app:layout_collapseMode="none"
@@ -77,7 +76,7 @@
             app:tabIndicatorColor="#F03A18"
             app:tabIndicatorHeight="5dp"
             app:tabSelectedTextColor="#F03A18"
-            app:tabTextColor="#fff"
+            app:tabTextColor="#000000"
             android:elevation="10dp"/>
     </FrameLayout>
 
