--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -29,6 +29,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/profileHeader"
+                    android:textColor="#000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="70dp"
+                    android:text="My Profile"
+                    android:textSize="30sp" />
+
                 <ImageView
                     android:id="@+id/Home"
                     android:layout_width="30dp"
@@ -49,26 +60,16 @@
             android:layout_below="@+id/toolbar_profile"
             android:layout_alignParentStart="true"
             android:background="@drawable/search_gradient"/>
-        <TextView
-            android:id="@+id/profileHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="My Profile"
-            android:textSize="26sp"
-            android:textColor="#000000"
-            android:padding="15dp"
-            android:layout_below="@+id/toolbar_profile"
-            android:layout_centerHorizontal="true" />
 
         <ImageView
             android:id="@+id/profileImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="65dp"
+            android:layout_below="@+id/toolbar_profile"
             android:background="@drawable/border"
-            app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
-            android:layout_below="@+id/profileHeader"
-            android:layout_centerHorizontal="true" />
+            app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
 
 
         <android.support.v7.widget.RecyclerView
