--- a/app/src/main/res/layout/activity_user_feed.xml
+++ b/app/src/main/res/layout/activity_user_feed.xml
@@ -47,7 +47,8 @@
                     android:textSize="30sp"
                     android:layout_marginStart="70dp"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:textColor="#000000"/>
 
                 <ImageView
                     android:id="@+id/Home"
