--- a/app/src/main/res/layout/event_details_activity.xml
+++ b/app/src/main/res/layout/event_details_activity.xml
@@ -11,21 +11,21 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
+
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tvHost"
-                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/tvEventName"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
                 android:text="@string/host"
                 android:textAppearance="@android:style/TextAppearance.Large"
+                android:textColor="#000000"
                 android:textSize="25sp" />
 
             <TextView
@@ -33,42 +33,43 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvHost"
-                android:textColor="#000000"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
                 android:text="@string/event_info"
+                android:textColor="#000000"
                 android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/tvEventDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/tvHost"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="21dp"
+                android:gravity="center"
                 android:text="@string/event_description"
-                android:layout_alignStart="@+id/tvEventInfo"
-                android:layout_below="@+id/tvEventInfo" />
+                android:textColor="#000000" />
 
             <TextView
                 android:id="@+id/tvEventName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
                 android:fontFamily="serif"
+                android:gravity="center"
                 android:text="@string/event_name"
-                android:textSize="36sp"
-                android:textStyle="bold"
                 android:textColor="#000000"
-                />
+                android:textSize="36sp"
+                android:textStyle="bold" />
+
             <fragment
                 android:id="@+id/youtubeFragment"
-                android:layout_below="@+id/tvEventDescription"
+                android:name="com.google.android.youtube.player.YouTubePlayerFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:layout_marginTop="10dp"
-                android:name="com.google.android.youtube.player.YouTubePlayerFragment">
-            </fragment>
+                android:layout_alignEnd="@+id/tvEventInfo"
+                android:layout_below="@+id/tvEventDescription"></fragment>
         </RelativeLayout>
     </ScrollView>
     <Button
