--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -27,33 +27,36 @@
                 android:id="@+id/tvHost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_below="@+id/line"
+                android:gravity="center"
                 android:text="@string/host"
+                android:textColor="#000000"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textSize="18sp"
-                android:layout_marginStart="10dp"/>
+                android:layout_below="@+id/line"
+                android:layout_centerHorizontal="true" />
 
             <TextView
+                android:textColor="#000000"
                 android:id="@+id/tvEventInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tvHost"
-                android:layout_marginBottom="5dp"
+                android:gravity="center"
                 android:text="@string/event_info"
                 android:textSize="16sp"
                 android:textStyle="italic"
-                android:layout_marginStart="10dp"/>
+                android:layout_below="@+id/tvHost"
+                android:layout_centerHorizontal="true" />
 
             <TextView
+                android:textColor="#000000"
+
                 android:id="@+id/tvEventDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="@string/event_description"
                 android:layout_below="@+id/line2"
-                android:layout_marginBottom="5dp"
-                android:layout_marginStart="10dp"
-                android:layout_alignStart="@+id/tvEventName" />
+                android:layout_centerHorizontal="true" />
 
             <View
                 android:id="@+id/line"
