--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -8,12 +8,6 @@
     tools:context="com.codepath.engage.EventDetailsActivity"
     android:background="@color/white">
 
-    <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_alignParentStart="true">-->
-
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,11 +22,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:layout_below="@+id/line"
                 android:text="@string/host"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textSize="18sp"
-                android:layout_marginStart="10dp"/>
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"/>
 
             <TextView
                 android:id="@+id/tvEventInfo"
@@ -55,13 +49,14 @@
                 android:layout_marginStart="10dp"
                 android:layout_alignStart="@+id/tvEventName" />
 
-            <View
-                android:id="@+id/line"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"
-                android:layout_margin="5dp"
-                android:layout_below="@+id/tvEventName" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvEventInfo"
+                android:text="Event Location"
+                android:id="@+id/tvEventLocation"
+                android:layout_marginStart="10dp"
+                android:textSize="16sp"/>
 
             <View
                 android:id="@+id/line2"
@@ -69,7 +64,7 @@
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"
                 android:layout_margin="5dp"
-                android:layout_below="@+id/tvEventInfo" />
+                android:layout_below="@+id/tvEventLocation" />
 
             <View
                 android:id="@+id/line3"
@@ -92,16 +87,4 @@
             </fragment>
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
-
-    <!--<Button-->
-        <!--android:id="@+id/fabSave"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_marginBottom="5dp"-->
-        <!--android:layout_marginEnd="5dp"-->
-        <!--android:text="Save"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentEnd="true" />-->
-
 </RelativeLayout>
