--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -25,10 +25,9 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="66dp"
             android:text="@string/issues"
-            android:textAllCaps="true"
-            android:textSize="52sp"
-            android:textStyle="bold"
-            android:textColor="#000000" />
+            android:textAllCaps="false"
+            android:textColor="#000000"
+            android:textSize="52sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvIssues"
@@ -36,8 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/hpIssues"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="13dp"
             android:background="@drawable/issue_recyclerview_border" />
 
