--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,18 +12,18 @@
         android:layout_height="match_parent"
         tools:context="com.codepath.engage.ProfileActivity">
 
-        <android.support.v7.widget.Toolbar
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/toolbar_profile"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:fitsSystemWindows="true"
-            android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:fitsSystemWindows="true"
+            android:gravity="center"
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp"
-            app:contentInsetStartWithNavigation="0dp"
-            android:id="@+id/toolbar_profile">
+            app:contentInsetStartWithNavigation="0dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -31,24 +31,25 @@
 
                 <TextView
                     android:id="@+id/profileHeader"
-                    android:textColor="#000000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="70dp"
-                    android:text="My Profile"
+
+                    android:layout_alignTop="@+id/Home"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="78dp"
+                    android:text="Profile"
+                    android:textColor="#000000"
                     android:textSize="30sp" />
 
                 <ImageView
                     android:id="@+id/Home"
                     android:layout_width="30dp"
-                    android:onClick="goHome"
                     android:layout_height="30dp"
-                    android:layout_marginTop="10dp"
-                    app:srcCompat="@drawable/home"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="10dp"/>
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="10dp"
+                    android:onClick="goHome"
+                    app:srcCompat="@drawable/home" />
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
@@ -85,7 +86,7 @@
             android:id="@+id/lineF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/profileImage"
+            android:layout_below="@+id/profileUsername"
             android:layout_centerHorizontal="false"
             android:layout_alignStart="@id/profileImage"
             android:orientation="vertical">
@@ -117,7 +118,7 @@
             android:id="@+id/view2"
             android:layout_width="1dp"
             android:layout_height="30dp"
-            android:layout_below="@id/profileImage"
+            android:layout_below="@id/profileUsername"
             android:layout_marginLeft="16dp"
             android:layout_toRightOf="@id/lineF"
             android:layout_marginBottom="5dp"
@@ -130,7 +131,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/profileImage"
-            android:layout_below="@+id/profileImage"
+            android:layout_below="@+id/profileUsername"
 
             android:orientation="vertical">
 
@@ -148,7 +149,6 @@
             <TextView
                 android:id="@+id/following"
                 android:textColor="#000000"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -188,6 +188,17 @@
 
         </android.support.design.widget.CoordinatorLayout>
 
+        <TextView
+            android:id="@+id/profileUsername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profileImage"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+
     </RelativeLayout>
 
     <FrameLayout
@@ -200,7 +211,6 @@
             android:id="@+id/drawer_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|center"
             android:scrollbars="vertical" />
 
     </FrameLayout>
