--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -3,12 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="7dp"
+    android:layout_marginTop="7dp"
+    android:background="@drawable/viewevents_border"
+    android:elevation="2dp"
+    >
 
     <ImageView
         android:id="@+id/ivProfileImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
@@ -21,23 +26,20 @@
         android:id="@+id/tvUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="User Name"
         android:textSize="22sp"
         android:maxLines="3"
         android:minLines="1"
         android:ellipsize="end"
         android:textStyle="bold"
-        android:layout_below="@+id/view"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:layout_below="@+id/ivProfileImage"
+        android:layout_centerHorizontal="true"/>
 
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_margin="5dp"
-        android:id="@+id/view" />
-
-
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@android:color/darker_gray"-->
+        <!--android:layout_margin="5dp"-->
+        <!--android:id="@+id/view" />-->
 
 </RelativeLayout>
