--- a/app/src/main/res/menu/menu_user_listing.xml
+++ b/app/src/main/res/menu/menu_user_listing.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_home"
         android:orderInCategory="100"
-        android:title="Home Page"
+        android:title="Return"
         app:showAsAction="never"
         />
 </menu>
